<resources>
    <string name="app_name">OurHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_shopping_list">Shopping list</string>
    <string name="menu_my_products">My products</string>
    <string name="menu_our_products">Our products</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up!</string>
    <string name="menu_home_groups">Home groups</string>
    <string name="menu_balance">Balance</string>
</resources>