<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/menu_shopping_list"
                android:gravity="center"
                android:textSize="32dp" />

            <EditText
                android:id="@+id/editTextShoppingListProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter item name here"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonAddItemToShoppingList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add item" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/menu_my_products"
                android:textSize="32dp" />

            <EditText
                android:id="@+id/editTextProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter product(s) here"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter price here"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/buttonAddProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add bought products" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/menu_home_groups"
                android:textSize="32dp" />

            <EditText
                android:id="@+id/editTextHomeGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Home group name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextHomeGroupAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Home group address"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextHomeGroupUsernames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Usernames to invite(separated by commas)"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonSendInvites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send invite(s) to create home group" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>